fix alignment

--- a/css/main.scss
+++ b/css/main.scss
@@ -226,6 +226,7 @@ body{
       display:grid;
       grid-template-columns:auto auto auto;
       padding:5px;
+      justify-items: center;
     }
 
     .grItem{
